--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,11 +6,21 @@
 
 
 {% block container %}
+
+
+    {% if error %}
+
+    <p class="alert alert-danger">{{error}}</p>
+
+    {% endif%}
+
     <form  method="POST" action="{% url 'login' %}">
         {% csrf_token %} 
-        <input type="text" name="Username" id="" name="username" />
-        <input type="password" name="password" id="">
-        <button type="submit" >Sign in</button>
+        <div class="form-group">
+            <input class="form-control mb-2"type="text" placeholder="Username" name="username" />
+            <input class="form-control"type="password" placeholder="Password" name="password" />
+        </div>
+        <button class="btn btn-primary btn-block mt-0"type="submit">Sign in</button>
     </form>
 
-{% endblock %}
+{% endblock %}  
